SF-754 Fix split container y-axis scrolling on Firefox

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/checking/checking/checking.component.scss
@@ -39,6 +39,9 @@
       @include media-breakpoint-down(sm) {
         max-height: calc(100vh - 180px);
       }
+      > as-split {
+        height: auto; /* fix for SF-754 */
+      }
     }
     #scripture-panel {
       > .panel {
